Add IDE instructions for VS Code